Added configuration parser.

--- a/database/database.ini
+++ b/database/database.ini
@@ -1,5 +1,11 @@
-[Connection]
+[Localhost]
 server = localhost
 user = root
-password = 
-database = 
+password = somepassword
+database = something
+
+[Production]
+server = server.net
+user = toor
+password = superSecretPassword
+database = db_something
