Added string methods.

--- a/composer.json
+++ b/composer.json
@@ -13,5 +13,8 @@
 	},
 	"suggest": {
 		"doctrine/dbal": "For working with databases in Doctrine class."
+	},
+	"require-dev": {
+		"nette/tester": "^1.7"
 	}
 }
