--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,9 @@ php:
   - 7.1
   - nightly
 
+services:
+  - mysql
+
 before_install:
   - composer self-update
 
@@ -15,7 +18,8 @@ install:
   - composer install --no-interaction --prefer-source
 
 script:
-  - ./libs/bin/tester -s ./tests/
+  - mysql < ./tests/database/testing.sql -u root
+  - ./libs/bin/tester -s ./tests/ -c ./tests/php.ini
 
 allow_failures:
   - php: 7.1
