--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,6 @@
 		"issues": "https://github.com/hermajan/lib/issues"
 	},
 	"license": "MIT",
-	"minimum-stability": "dev",
 	"autoload": {
 		"classmap": [""]
 	},
@@ -21,6 +20,7 @@
 		"fortawesome/font-awesome": "For changing color of Font Awesome icons with facolors.css."
 	},
 	"require-dev": {
+		"doctrine/dbal": "~2.4",
 		"fortawesome/font-awesome": "^4.7",
 		"nette/tester": "^1.7"
 	}
