--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,6 @@
 language: php
 
 php:
-  - 5.4
-  - 5.5
   - 5.6
   - 7.0
   - 7.1
@@ -19,10 +17,9 @@ install:
 
 script:
   - mysql < ./tests/database/testing.sql -u root
-  - ./libs/bin/tester -s ./tests/ -c ./tests/php.ini
+  - ./libs/bin/tester -s ./tests/
 
 allow_failures:
-  - php: 7.1
   - php: nightly
 
 after_failure:
