--- a/.travis.yml
+++ b/.travis.yml
@@ -4,15 +4,15 @@ php:
   - 7.0
   - 7.1
   - 7.2
-  - nightly
-
-services:
-  - mysql
+  - 7.3
+  - 7.4
+  - 8.0
 
 before_install:
   - composer self-update
 
 install:
+  - rm -rf composer.lock
   - composer install --no-interaction --prefer-source
 
 script:
