--- a/composer.json
+++ b/composer.json
@@ -19,16 +19,12 @@
 		"optimize-autoloader": true
 	},
 	
-	"suggest": {
-		"doctrine/dbal": "For working with databases in Doctrine class."
-	},
-	
 	"require": {
-		"php": "^7.0",
+		"php": ">=7.1",
 		"ext-dom": "*",
 		"ext-json": "*"
 	},
 	"require-dev": {
-		"nette/tester": "^1.7"
+		"nette/tester": "^2.3"
 	}
 }
